--- a/app/views/office/events/new.html.haml
+++ b/app/views/office/events/new.html.haml
@@ -1,5 +1,6 @@
-.panel
-  .panel-body
-    %h2 New Event
+.panel.panel-default
+  .panel-heading
+    %h3 New Event
 
+  .panel-body
     = render 'form'
