--- a/app/views/office/emails/_email.html.haml
+++ b/app/views/office/emails/_email.html.haml
@@ -1,5 +1,13 @@
-%span.label= email.locale.upcase
-%strong Subject
-= email.subject
-%pre
-  = email.body
+.panel.panel-default
+  .panel-heading
+    %h5 Language #{email.locale}
+  .panel-body
+    %dl
+      %dt Subject
+      %dd(ng-non-bindable)
+        %pre= email.subject
+      %dt Body
+      %dd(ng-non-bindable)
+        %pre= email.body
+    - if email.audits.any?
+      = render 'office/shared/audits', :audits => email.audits.descending
