--- a/app/views/office/events/edit.html.haml
+++ b/app/views/office/events/edit.html.haml
@@ -1,8 +1,9 @@
-.panel
-  .panel-body
+.panel.panel-default
+  .panel-heading
     = controls do |c|
       - c << delete_button
 
-    %h2 Editing #{event.display_name}
+    %h3 Edit #{@event.display_name}
 
+  .panel-body
     = render 'form'
