--- a/app/views/office/events/index.html.haml
+++ b/app/views/office/events/index.html.haml
@@ -5,4 +5,4 @@
     %h3 Upcoming #{pluralize(@events.size, 'Event')}
 
   .panel-body
-    = render 'events', :events => @events
+    = render 'events', events: @events
