dont store gravatar data in angel

--- a/app/views/office/angels/_angel.html.haml
+++ b/app/views/office/angels/_angel.html.haml
@@ -4,7 +4,7 @@
       %th Name
       %td
         = angel.full_name
-        = gravatar_image(angel.gravatar)
+        = angel_icon(angel)
     %tr
       %th Gender
       %td= angel.gender
