--- a/app/views/office/angels/_angels.html.haml
+++ b/app/views/office/angels/_angels.html.haml
@@ -11,7 +11,7 @@
   %tbody
     - angels.each do |a|
       %tr
-        %td= gravatar_image(a.gravatar)
+        %td= angel_icon(a)
         %td
           = link_to_show(office_angel_path(a), a.full_name)
           = angel_membership_status(a)
