--- a/app/views/office/angels/_map_info.html.haml
+++ b/app/views/office/angels/_map_info.html.haml
@@ -9,7 +9,7 @@
   %tbody
     - angels.each do |a|
       %tr
-        %td= gravatar_image(a.gravatar)
+        %td= angel_icon(a)
         %td= link_to_show(office_angel_path(a), a.full_name)
         %td= a.email
         %td= simple_format(compact_address(a))
