--- a/app/views/office/event_reports/_map_info.html.haml
+++ b/app/views/office/event_reports/_map_info.html.haml
@@ -9,7 +9,7 @@
   %tbody
     - registrations.each do |r|
       %tr
-        %td= gravatar_image(r.angel.gravatar) if r.angel
+        %td= angel_icon(r.angel) if r.angel
         %td= link_to_show(office_registration_path(r), r.full_name)
         %td= r.email
         %td= simple_format(compact_address(r))
