--- a/app/views/office/events/show.html.haml
+++ b/app/views/office/events/show.html.haml
@@ -8,6 +8,7 @@
 
   .panel-body
     = render 'event', event: @event
-
     - if @event.audits.any?
       = render 'office/shared/audits', audits: @event.audits.descending
+
+    = render 'event_emails', event: @event
