--- a/app/views/office/angels/_map_info.html.haml
+++ b/app/views/office/angels/_map_info.html.haml
@@ -1,16 +1,9 @@
-%table.table.table-striped
-  %thead
-    %tr
-      %th Img
-      %th Name
-      %th Email
-      %th Address
-      %th Phones
-  %tbody
-    - angels.each do |a|
-      %tr
-        %td= angel_icon(a)
-        %td= link_to_show(office_angel_path(a), a.full_name)
-        %td= a.email
-        %td= simple_format(compact_address(a))
-        %td= simple_format(compact_phones(a), {}, sanitize: false)
+.list-group
+  - angels.each do |a|
+    = link_to(office_angel_path(a), class: 'list-group-item') do
+      .mini-box
+        %span.box-icon
+          = angel_icon(a, 65)
+        .box-info
+          %p.size-h4= a.full_name
+          %p= a.email
