--- a/app/views/office/angels/_memberships.html.haml
+++ b/app/views/office/angels/_memberships.html.haml
@@ -1,16 +1,6 @@
-%table.table.table-striped
-  %thead
-    %tr
-      %th Status
-      %th Active
-      %th Retired
-      %th Participant Cost
-      %th Team Cost
-  %tbody
-    - memberships.by_active_on_desc.each do |m|
-      %tr
-        %td= link_to_show(office_membership_path(m), m.status)
-        %td= local_date m.active_on
-        %td= local_date m.retired_on
-        %td= local_currency m.participant_cost
-        %td= local_currency m.team_cost
+.list-group
+  - memberships.by_active_on_desc.each do |m|
+    = link_to(office_membership_path(m), class: 'list-group-item') do
+      %p
+        %span.size-h4= m.status
+        %span #{local_date m.active_on} to #{local_date(m.retired_on) || 'current'}
