--- a/app/views/layouts/_layout.html.haml
+++ b/app/views/layouts/_layout.html.haml
@@ -24,6 +24,7 @@
             %span.icon-bar
             %span.icon-bar
           %a.navbar-brand HAI #{Site.name.upcase}
+          = yield :header
 
     #nav-container
       #nav-wrapper
