--- a/app/views/layouts/office.html.haml
+++ b/app/views/layouts/office.html.haml
@@ -2,4 +2,17 @@
   = tabs(:office)
   %p.navbar-text.navbar-right= link_to(current_staff.email, destroy_staff_session_path, class: 'navbar-link')
 
+- content_for :header do
+  %ul.nav.navbar-nav
+    - if (count = PublicSignup.pending.count) > 0
+      %li
+        = link_to(office_public_signups_path) do
+          Pending
+          %span.badge= count
+    - if (count = PublicSignup.waitlisted.count) > 0
+      %li
+        = link_to(waitlisted_office_public_signups_path) do
+          Wait Listed
+          %span.badge= count
+
 = render 'layouts/layout'
