--- a/app/views/office/dashboards/index.html.haml
+++ b/app/views/office/dashboards/index.html.haml
@@ -1,30 +1,27 @@
 = render 'experiments' if params[:x] == '1'
 
-- if @pending.count > 0
-  .panel
-    .panel-body
-      = controls do |c|
-        - c << show_button(label: 'Show Pending Signups', path: office_public_signups_path)
+.panel.panel-default
+  .panel-heading
+    %h3 Dashboard
 
-      %h3
-        #{pluralize(@pending.count, "public signup")} pending approval.
+  .panel-body
 
-- if @waitlisted.count > 0
-  .panel
-    .panel-body
-      = controls do |c|
-        - c << show_button(label: 'Show Wait Listed Signups', path: waitlisted_office_public_signups_path)
+    - if @last_event
+      .panel.panel-default
+        .panel-heading
+          %h4 Last Event
 
-      %h3
-        #{pluralize(@waitlisted.count, "public signup")} wait listed.
+        .panel-body
+          .list-group
+            = link_to(status_office_event_report_path(@last_event), class: 'list-group-item') do
+              = render 'event', event: @last_event
 
-- @events.each do |event|
-  .panel
-    .panel-body
-      = controls do |c|
-        - c << registrations_button(event)
-
-      %h2 
-        #{event.display_name} ~ #{time_ago_in_words(event.start_date)}
-
-      = render 'office/event_reports/counts', registrations: event.registrations.approved
+    - if @upcoming_events.any?
+      .panel.panel-default
+        .panel-heading
+          %h4= pluralize(@upcoming_events.size, 'Upcoming Event')
+        .panel-body
+          .list-group
+            - @upcoming_events.each do |event|
+              = link_to(status_office_event_report_path(@last_event), class: 'list-group-item') do
+                = render 'event', event: event
