--- a/app/views/office/event_reports/payment.html.haml
+++ b/app/views/office/event_reports/payment.html.haml
@@ -4,4 +4,4 @@
       - c << csv_button
 
     %h2 #{@event.display_name} Payment Report
-    = render 'grouped', report: 'payment'
+    = render 'grouped', report: 'payment', event: @event
