--- a/app/views/office/event_reports/status.html.haml
+++ b/app/views/office/event_reports/status.html.haml
@@ -8,4 +8,4 @@
 
   .panel-body
     = render 'counts', event: @event
-    = render 'grouped', report: 'status'
+    = render 'grouped', report: 'status', event: @event
