--- a/app/views/office/event_reports/site.html.haml
+++ b/app/views/office/event_reports/site.html.haml
@@ -4,4 +4,4 @@
       - c << csv_button
 
     %h2 #{@event.display_name} Site Report
-    = render 'grouped', report: 'site'
+    = render 'grouped', report: 'site', event: @event
