--- a/app/views/office/event_reports/completed.html.haml
+++ b/app/views/office/event_reports/completed.html.haml
@@ -1,6 +1,6 @@
 .panel.panel-default
   .panel-heading
-    %h3 #{@event.display_name} Completion Report
+    %h3 Completion Report
 
   .panel-body
     %p
