--- a/app/views/office/event_reports/payment.html.haml
+++ b/app/views/office/event_reports/payment.html.haml
@@ -1,7 +1,9 @@
-.panel
-  .panel-body
+.panel.panel-default
+  .panel-heading
     = controls do |c|
       - c << csv_button
 
-    %h2 #{@event.display_name} Payment Report
+    %h3 Payment Report
+
+  .panel-body
     = render 'grouped', report: 'payment', event: @event
