--- a/app/views/office/event_reports/roster.html.haml
+++ b/app/views/office/event_reports/roster.html.haml
@@ -1,11 +1,12 @@
-.panel
-  .panel-body
+.panel.panel-default
+  .panel-heading
     = controls do |c|
       - c << csv_button
       - c << pdf_button
 
-    %h2 #{@roster.title}
+    %h3 #{@roster.title}
 
+  .panel-body
     %p
       Click PDF Format to generate a printable version. Only angels marked as completed will appear on this roster.
 
