--- a/app/views/office/registrations/_staff.html.haml
+++ b/app/views/office/registrations/_staff.html.haml
@@ -1,19 +1,21 @@
-%table.table.table-key-values
-  %caption
-    %h6 Staff Information
-  %tbody
-    %tr
-      %th Room
-      %td= registration.room
-    %tr
-      %th Clothing Conversation
-      %td= registration.clothing_conversation
-    %tr
-      %th Fee Received
-      %td= registration.reg_fee_received
-    %tr
-      %th Status
-      %td= registration.status
-    %tr
-      %th Completed
-      %td= registration.completed
+.panel.panel-default
+  .panel-heading
+    %h4 Staff Information
+
+  %table.table.table-key-values
+    %tbody
+      %tr
+        %th Room
+        %td= registration.room
+      %tr
+        %th Clothing Conversation
+        %td= registration.clothing_conversation
+      %tr
+        %th Fee Received
+        %td= registration.reg_fee_received
+      %tr
+        %th Status
+        %td= registration.status
+      %tr
+        %th Completed
+        %td= registration.completed
